# Cursor-learn-project

backend/: .env  pyproject.toml
backend/app/: __init__.py  main.py  test_db.py
backend/app/api/v1/endpoints/: __init__.py  products.py
backend/app/core/: config.py  supabase.py
backend/app/schemas/: __init__.py  product.py
